C-compatible wrappers for ampgen amplitude functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Files that you should copy from elsewhere that I don't want getting accidentally added to git
+lib_efficiency/amplitude_models/cf.cpp
+lib_efficiency/amplitude_models/dcs.cpp
+
 # Data, output, etc.
 *.pkl
 *.png
